<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="sign_in_failed">There was an issue with sign in, please try again later.</string>
    <string name="app_name">Onesearch</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_menu">menu</string>
    <string name="menu_easy">Easy</string>
    <string name="menu_medium">Medium</string>
    <string name="menu_hard">Hard</string>
    <string name="menu_advanced">Advanced</string>
    <string name="sign_in">Sign in with G+</string>
    <string name="results_return_menu">Return to Menu</string>
    <string name="results_replay">Play Again</string>
    <!-- Google Play -->
    <string name="app_id">27965296756</string>
    <string name="leaderboard_highest_scores__easy">CggI9KDylmgQAhAB</string>
    <string name="leaderboard_highest_scores__medium">CggI9KDylmgQAhAC</string>
    <string name="leaderboard_highest_scores__hard">CggI9KDylmgQAhAD</string>
    <string name="leaderboard_highest_scores__advanced">CggI9KDylmgQAhAE</string>

    <!-- Google Analytics -->
    <string name="ga_menu_screen">Main Menu</string>
    <string name="ga_gameplay_screen">Gameplay</string>
    <string name="ga_results_screen">Results</string>

    <string name="ga_click_easy">Click Easy</string>
    <string name="ga_click_medium">Click Medium</string>
    <string name="ga_click_hard">Click Hard</string>
    <string name="ga_click_pause">Click Pause</string>
    <string name="ga_click_skip">Click Skip</string>
    <string name="ga_click_leaderboard">Click Leaderboard</string>
    <string name="ga_click_achievement">Click Achievement</string>
    <string name="ga_click_replay">Click Play Again</string>
    <string name="ga_click_return_to_menu">Click Return to Menu</string>

</resources>
