<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="chrisjluc.funsearch.ui.MenuActivity">

    <chrisjluc.funsearch.ui.components.GameTextView
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <chrisjluc.funsearch.ui.components.GameButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/element_margin_separation"
            android:text="@string/menu_easy"
            android:id="@+id/bMenuEasy" />

        <chrisjluc.funsearch.ui.components.GameButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/element_margin_separation"
            android:text="@string/menu_medium"
            android:id="@+id/bMenuMedium" />

        <chrisjluc.funsearch.ui.components.GameButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/element_margin_separation"
            android:text="@string/menu_hard"
            android:id="@+id/bMenuHard" />

        <chrisjluc.funsearch.ui.components.GameButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/element_margin_separation"
            android:text="@string/menu_advanced"
            android:id="@+id/bMenuAdvanced" />
    </LinearLayout>

</RelativeLayout>
