<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="chrisjluc.onesearch.ui.ResultsActivity">

    <chrisjluc.onesearch.ui.components.GameTextView
        android:layout_centerHorizontal="true"
        android:text="@string/title_activity_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <chrisjluc.onesearch.ui.components.GameTextView
        android:layout_centerInParent="true"
        android:text="Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvScoreResult" />

    <com.google.android.gms.common.SignInButton
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvScoreResult"
        android:id="@+id/bResultSignIn"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <chrisjluc.onesearch.ui.components.GameButton
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvScoreResult"
        android:id="@+id/bShowLeaderBoards"
        android:text="See leaderboards"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <chrisjluc.onesearch.ui.components.GameButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/element_margin_separation"
            android:text="@string/results_replay"
            android:id="@+id/bReplay"
            android:layout_weight="0.50" />

        <chrisjluc.onesearch.ui.components.GameButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/element_margin_separation"
            android:text="@string/results_return_menu"
            android:id="@+id/bReturnMenu"
            android:layout_weight="0.50" />

    </LinearLayout>

</RelativeLayout>
